# happy-ai-agent

./: .gitignore  CLAUDE.md  GEMINI_LIMITS.md  HANDOFF.md  HANDOFF_ARCHIVE_coddy1to4.md  HAPPY.spec  HAPPY_AI_AGENT_HANDOFF.md  HappyAIAgent.spec  Nick_Creative_Portfolio.docx  ONBOARD_NEW_CODDY.md  ONBOARD_NEW_COSS.md  README.md  V-Log.md  WEB_TEST_RESULTS.md  WORKIE_NOTES.md  agents.py  app.py  auth.py  builder.py  extractor.py  file_loader.py  happy_desktop.py  happy_native.py  installer-mockup.html  lifecycle_test.py  pipeline.py  pyproject.toml  qa_final.py  requirements.txt  test_pipeline_e2e.py  ui_verify.py  updater.py  ระบบดาวเทียม.html
.github/workflows/: test.yml
.streamlit/: config.toml
archive/: README.md  cloudshell_cheatsheet.html  cloudshell_cheatsheet.md  implementation_guide.md  index.html
backups/: happy_native_v2.0.6_pre_ui_rewrite.py
bug/: bug_v2.8.1.md  bug_v2.8.2.md
core/: __init__.py  config.py  persistence.py  quotas.py
installer/: HAPPY.iss  HappyAIAgentSetup.spec  build_installer.py  installer.py  license-en.txt  license-th.txt
log/: log_v2.8.1.md  log_v2.8.2.md  log_v2.8.3.md
memory/: MEMORY.md  SHARED_LESSONS.md  nick-workflow.md
releases/: README.md
releases/v1.032/: release-notes.md
releases/v2.0.6/: release-notes.md
tests/: conftest.py  test_agents_directives.py  test_auth.py  test_builder.py  test_config.py  test_extractor.py  test_extractor_revision_order.py  test_file_loader.py  test_pipeline_auth_error.py  test_pipeline_parsers.py  test_quotas.py  test_running_page_regression.py  test_updater.py
tools/: lucifer.js  make_icon.py  stage_embedded_python.py  supertester.js  test_ai_pipeline.py  tester.js
ui/: __init__.py  app.py  emoji_image.py  sidebar.py  theme.py
ui/components/: agent_row.py  (+8 more)
user/: README.md
(+7 files in other folders)
